@@ -1,2 +1,2 @@
 **/Test*MR.java
-+**/spark/*.java
+**/spark/*.java
